create skeloton of index page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 </head>
 
 <body>
-    <div class="container">  
-        <input type="text" name="todo-item-input" id="todo-item-input"> 
-    </div>
+    <main class="container">  
+        <div class="add-section">
+            <h1>Enter Your Daily Task !</h1>   
+            <input type="text" name="todo-item-input" id="todo-item-input"> </br>
+            <input type="text" name="todo-description-input" id="todo-description-input"></br>
+            <button type="submit">Add Task</button> 
+        </div>
+        <div class="review-section">
+            <h2>Your’s To Do List</h2>
+        </div>
+    </main>
 
     
     <script src="./app.js"></script>
