edit container design of index page

--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 </head>
 
 <body>
-    <main class="container">  
+    <main>  
         <div class="add-section">
-            <h1>Enter Your Daily Task !</h1>   
-            <input type="text" name="todo-item-input" id="todo-item-input"> </br>
-            <input type="text" name="todo-description-input" id="todo-description-input"></br>
-            <button type="submit">Add Task</button> 
+            <div class="container">
+                <h1>Enter Your Daily Task !</h1>   
+                <input type="text" name="todo-item-input" id="todo-item-input"> </br>
+                <input type="text" name="todo-description-input" id="todo-description-input"></br>
+                <button type="submit">Add Task</button> 
+            </div>
         </div>
         <div class="review-section">
             <h2>Your’s To Do List</h2>
+            <div class="container">
+                
+            </div>
         </div>
     </main>
 
