add create description element function

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="review-section">
             <div class="container">
                 <h2>Your’s To Do List</h2>
-                <div class="add-task-section">
-                </div>
+                <ul class="add-task-ul">
+                </ul>
             </div>
         </div>
     </main>
