--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <main>  
+    <main>
         <div class="add-section">
             <div class="container">
-                <h1>Enter Your Daily Task !</h1>   
-                <input type="text" name="todo-item-input" id="todo-item-input"> </br>
-                <input type="text" name="todo-description-input" id="todo-description-input"></br>
-                <button class="add-task-btn" type="submit">Add Task</button> 
+                <div class="daily-task">
+                    <div class="create-todo">
+                    <h1>Enter Your Daily Task !</h1>
+                    <input type="text" name="todo-item-input" id="todo-item-input"> </br>
+                    <input type="text" name="todo-description-input" id="todo-description-input"></br>
+                    <button class="add-task-btn" type="submit">Add Task</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="review-section">
@@ -31,7 +36,7 @@
         </div>
     </main>
 
-    
+
     <script src="./app.js"></script>
 </body>
 
