add review-seciton class style

--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
             <div class="container">
                 <div class="daily-task">
                     <div class="create-todo">
-                    <h1>Enter Your Daily Task !</h1>
-                    <input type="text" name="todo-item-input" id="todo-item-input"> </br>
-                    <input type="text" name="todo-description-input" id="todo-description-input"></br>
-                    <button class="add-task-btn" type="submit">Add Task</button>
+                        <h1>Enter Your Daily Task !</h1>
+                        <input type="text" name="todo-item-input" id="todo-item-input"> </br>
+                        <input type="text" name="todo-description-input" id="todo-description-input"></br>
+                        <button class="add-task-btn" type="submit">Add Task</button>
+                    </div>
+                    <div class="date-todo"> 
+                        <p>September 19, 2022</p>
+                        <p>5.07 PM</p> 
                     </div>
                 </div>
             </div>
         </div>
         <div class="review-section">
-            <div class="container">
-                <h2>Your’s To Do List</h2>
-                <ul class="add-task-ul">
-                </ul>
-            </div>
+            <h2>Your’s Daily Task</h2>
+            <ul class="add-task-ul">
+            </ul>
         </div>
     </main>
 
