add class element and id for date

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <button class="add-task-btn" type="submit">Add Task</button>
                     </div>
                     <div class="date-todo"> 
-                        <p>September 21, 2022</p>
-                        <p>5.07 PM</p> 
+                        <p id="date">September 21, <span class="year">2022</span></p>
+                        <p id="clock">5.07 <span class="am-pm">PM</span> </p> 
                     </div>
                 </div>
             </div>
