add time and date on landing page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                         <button class="add-task-btn" type="submit">Add Task</button>
                     </div>
                     <div class="date-todo"> 
-                        <p id="date">September 21, <span class="year">2022</span></p>
-                        <p id="clock">5.07 <span class="am-pm">PM</span> </p> 
+                        <!-- <p class="month">dwd</p> -->
+                        <p><span class="month"> </span><span class="day"></span>, <span class="year">2030</span></p>
+                        <p><span class="clock">5</span><span class="minutes"> 07 </span><span class="am-pm"></span> </p> 
                     </div>
                 </div>
             </div>
