--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     </div>
                     <div class="date-todo"> 
                         <!-- <p class="month">dwd</p> -->
-                        <p><span class="month"> </span><span class="day"></span>, <span class="year">2030</span></p>
-                        <p><span class="clock">5</span><span class="minutes"> 07 </span><span class="am-pm"></span> </p> 
+                        <p><span class="month"></span><span class="day"></span> , <span class="year">2030</span></p>
+                        <p><span class="clock"></span><span class="minutes"> </span><span class="am-pm"></span> </p> 
                     </div>
                 </div>
             </div>
