--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div class="daily-task">
                     <div class="create-todo">
                         <h1>Enter Your Daily Task !</h1>
-                        <input type="text" name="todo-item-input" id="todo-item-input"> </br>
-                        <input type="text" name="todo-description-input" id="todo-description-input"></br>
+                        <input type="text" name="todo-item-input" id="todo-item-input" placeholder="Write Your Main Task"> </br>
+                        <input type="text" name="todo-description-input" id="todo-description-input" placeholder="Description of Task"></br>
                         <button class="add-task-btn" type="submit">Add Task</button>
                     </div>
                     <div class="date-todo"> 
