edit container responsible setting

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
                 <div class="daily-task">
                     <div class="create-todo">
                         <h1>Enter Your Daily Task !</h1>
-                        <input type="text" name="todo-item-input" id="todo-item-input" placeholder="Write Your Main Task"> </br>
-                        <input type="text" name="todo-description-input" id="todo-description-input" placeholder="Description of Task"></br>
+                        <input type="text" name="todo-item-input" id="todo-item-input"
+                            placeholder="Write Your Main Task"> </br>
+                        <input type="text" name="todo-description-input" id="todo-description-input"
+                            placeholder="Description of Task"></br>
                         <button class="add-task-btn" type="submit">Add Task</button>
                     </div>
-                    <div class="date-todo"> 
+                    <div class="date-todo">
                         <!-- <p class="month">dwd</p> -->
                         <p><span class="month"></span><span class="day"></span> , <span class="year"></span></p>
-                        <p><span class="clock"></span><span class="minutes"> </span><span class="am-pm"></span> </p> 
+                        <p><span class="clock"></span><span class="minutes"> </span><span class="am-pm"></span> </p>
                     </div>
                 </div>
             </div>
@@ -39,7 +41,7 @@
             <ul class="add-task-ul">
             </ul>
         </div>
-        
+
     </main>
 
 
