--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             </ul>
         </div>
 
+        <div class="modal-container">
+            <div class="modal">
+                <i class="bi bi-heart-fill"></i>
+                <p>Prepare your daily task today and get your life in order. </p>
+                <button id="ok">Ok !</button>
+            </div>
+        </div>
+
     </main>
 
 
