added modal on window load

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="modal">
                 <i class="bi bi-heart-fill"></i>
                 <p>Prepare your daily task today and get your life in order. </p>
-                <button id="ok">Ok !</button>
+                <button id="modal-ok">Ok !</button>
             </div>
         </div>
 
