added error box

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <div class="daily-task">
                     <div class="create-todo">
                         <h1>Enter Your Daily Task !</h1>
+                        <div class="errorBox">
+                            <div class="errorMessage">!</div>
+                        </div>
                         <input type="text" name="todo-item-input" id="todo-item-input"
                             placeholder="Write Your Main Task"> </br>
                         <input type="text" name="todo-description-input" id="todo-description-input"
@@ -28,7 +31,6 @@
                         <button class="add-task-btn" type="submit">Add Task</button>
                     </div>
                     <div class="date-todo">
-                        <!-- <p class="month">dwd</p> -->
                         <p class="date"></p>
                         <p><span class="clock"></span><span class="minutes"> </span><span class="am-pm"></span> </p>
                     </div>
